zno-macro-draft/tests/zno/ui/err/019-has-duplicate-enter_on_poll.rs
use zno::zno;

#[zno(enter_on_poll = true, enter_on_poll = false)]
fn f(a: u32) -> u32 {
    a
}

fn main() {
    f(1);
}
